Twitter card fixed

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="twitter:creator" content="@tiramisu_oTATo" />
 	<meta property="og:title" content="Twitter用ミニマスデッキ画像自動レイアウトツール" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://usuba.rosx.net/MinionMasters" />
-	<meta property="og:image" content="https://usuba.rosx.net/MinionMasters/thumbnail.jpg" />
+	<meta property="og:url" content="https://thiramisu.github.io/Minion-Masters-Deck-Image-Auto-Layout-Tool/index.html" />
+	<meta property="og:image" content="https://thiramisu.github.io/Minion-Masters-Deck-Image-Auto-Layout-Tool/thumbnail.jpg" />
 	<meta property="og:description" content="Twitterにミニマスのデッキを簡単にかっこよく載っけるためのツール"/>
 	<title>ミニマスデッキ画像自動レイアウトツール</title>
 	<script src="minimas.js"></script>
