--- a/index en.html
+++ b/index en.html
@@ -7,8 +7,8 @@
 	<meta name="twitter:creator" content="@tiramisu_oTATo" />
 	<meta property="og:title" content="Minion Masters Deck Image Auto Layout Tool for Twitter" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://usuba.rosx.net/MinionMasters" />
-	<meta property="og:image" content="https://usuba.rosx.net/MinionMasters/thumbnail.jpg" />
+	<meta property="og:url" content="https://thiramisu.github.io/Minion-Masters-Deck-Image-Auto-Layout-Tool/index_en.html" />
+	<meta property="og:image" content="https://thiramisu.github.io/Minion-Masters-Deck-Image-Auto-Layout-Tool/thumbnail.jpg" />
 	<meta property="og:description" content="Relayouting Tool of Minion Masters' Deck Image to visualize cooler and easier on Twitter / Twitterにミニマスのデッキを簡単にかっこよく載っけるためのツール"/>
 	<title>ミニマスデッキ画像自動レイアウトツール / Minion Masters Deck Image Auto Layout Tool</title>
 	<script src="minimas.js"></script>
