--- a/index_en.html
+++ b/index_en.html
@@ -68,6 +68,7 @@
 		<select id="layout" class="select">
 			<option value="0">type 0</option>
 			<option value="1">type 1</option>
+			<option value="3">type 1-B</option>
 			<option value="2">type 2</option>
 		</select>
 	</label>
