--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		content="https://thiramisu.github.io/Minion-Masters-Deck-Image-Auto-Layout-Tool/thumbnail.jpg" />
 	<meta property="og:description" content="Twitterにミニマスのデッキを簡単にかっこよく載っけるためのツール" />
 	<title>ミニマスデッキ画像自動レイアウトツール</title>
+	<link rel="icon" type="image/png" href="/icon.png">
 	<script src="minimas.js"></script>
 	<style>
 		body {
