--- a/index_en.html
+++ b/index_en.html
@@ -12,6 +12,7 @@
 		content="https://thiramisu.github.io/Minion-Masters-Deck-Image-Auto-Layout-Tool/thumbnail.jpg" />
 	<meta property="og:description" content="Relayouting Tool of Minion Masters' Deck Image to visualize cooler and easier on Twitter" />
 	<title>Minion Masters Deck Image Auto Layout Tool</title>
+	<link rel="icon" type="image/png" href="/icon.png">
 	<script src="minimas.js"></script>
 	<style>
 		body {
