--- a/index.html
+++ b/index.html
@@ -12,55 +12,9 @@
 		content="https://thiramisu.github.io/Minion-Masters-Deck-Image-Auto-Layout-Tool/thumbnail.jpg" />
 	<meta property="og:description" content="Twitterにミニマスのデッキを簡単にかっこよく載っけるためのツール" />
 	<title>ミニマスデッキ画像自動レイアウトツール</title>
-	<link rel="icon" type="image/png" href="icon.png">
-	<script src="minimas.js"></script>
-	<style>
-		body {
-			background-color: rgb(24, 29, 53);
-			color: #eee;
-			display: flex;
-			flex-direction: column;
-		}
-
-		.canvas {
-			height: 195px;
-			width: 360px;
-		}
-
-		.label {
-			background-color: rgb(43, 54, 112);
-			border: 1px solid #a19929;
-			border-radius: 3px;
-			box-shadow: 0 0 2px 1px rgba(255, 255, 255, 0.3);
-			margin-bottom: 2px;
-			padding: 2px;
-		}
-
-		.select {
-			background-color: rgb(45, 67, 177);
-			color: #eee;
-			border: 1px solid #a19929;
-			border-radius: 1px;
-		}
-
-		.preview {
-			width: 100%;
-		}
-
-		.link,
-		.link:visited {
-			color: #eee;
-			text-decoration: underline
-		}
-
-		.center {
-			text-align: center;
-		}
-
-		.warning {
-			color: #e11;
-		}
-	</style>
+	<link rel="stylesheet" href="minimas.css" />
+	<link rel="icon" type="image/png" href="icon.png" />
+	<script src="minimas.js" defer></script>
 </head>
 
 <body>
