--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-	<div class="label">※Chrome以外で動くか分かりません</div>
+	<div class="label">※Chrome以外で動くか分かりません / Chrome Recommended</div>
 	<label class="label"><span class="title">レイアウトタイプ / Layout Type</span>
 		<select id="layout" class="select">
 			<option value="0">type 0</option>
@@ -30,10 +30,10 @@
 	<label class="label">
 		デッキ構築画面のスクショ / Screenshot of deckbuilding<br />
 		<input type="file" accept=".png,.jpg" id="image"><br />
-		(ボタンの上にドラッグ&ドロップ可)
+		(ボタンの上にドラッグ&ドロップ可 / Drag-and-drop to the button is available)
 	</label>
 	<div class="label">結果 / Result<br />
-		(右クリックから保存できます)<br />
+		(右クリックから保存できます / Right-click to save to local)<br />
 		<div id="warning" class="warning"></div>
 		<canvas id="canvas" class="canvas" width="360" height="195"></canvas>
 	</div>
@@ -44,7 +44,7 @@
 		<img src="example.jpg">
 	</div>
 	<footer class="center">created by <a href="https://twitter.com/tiramisu_oTATo" class="link">@tiramisu_oTATo</a>
-		(unofficial)</footer>
+		(unofficial)<br>If there are any problems, please contact me.<br>問題等あればご連絡ください</footer>
 </body>
 
 </html>
