--- a/replay-analyzer.html
+++ b/replay-analyzer.html
@@ -102,7 +102,7 @@
               <label><input type="checkbox" name="gameMode1v1" hidden><span
                   class="checkbox-label button">1v1</span></label>
               <label><input type="checkbox" name="gameModePremade" hidden><span
-                  class="checkbox-label button">プリメイド</span></label>
+                  class="checkbox-label button">2v2</span></label>
               <label hidden><input type="checkbox" name="gameMode2v2" hidden><span
                   class="checkbox-label button">野良</span></label>
               <label hidden><input type="checkbox" name="gameModeNPC" hidden checked><span
@@ -173,6 +173,7 @@
     </div>
   </div>
   <div class="loading-screen">ロード中</div>
+	<div class="label">※Chrome以外で動くか分かりません / Chrome Recommended</div>
   <div class="label">
     <table class="filter--table">
       <tr>
